--- a/StylePageContact.css
+++ b/StylePageContact.css
@@ -1,6 +1,43 @@
-nav{
-
-    background-color: black;
-    padding-bottom: 4%;
-    text-align: end;
-    }
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+ 
+}
+ nav{
+     
+     background-size: cover;
+     background-repeat: no-repeat;
+     font-family: sans-serif;
+     height: 100vh;
+   
+ 
+}
+ .nav-list{
+     padding: 1rem 0;
+     display: flex;
+     justify-content: flex-end;
+     align-items: center;
+     
+ 
+}
+ .nav-item{
+     margin-right: 2rem;
+     
+     font-weight: 600
+}
+ .nav-item a {
+ 
+ color: white;
+ letter-spacing: 1.2px;
+}
+ 
+ .nav-item:first-child{
+    
+ 
+}
+ ul{
+ 
+     background-color: black;
+}
