--- a/StylePageConfirmationContact.css
+++ b/StylePageConfirmationContact.css
@@ -43,3 +43,20 @@
  
      background-color: black;
 }
+.container-page-confirmation-contact{
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: space-between;
+font-size: 30px;
+}
+.texte-au-millieu-page-confirmation-contact{
+color: green;
+padding-top: 300px;
+padding-bottom: 400px;
+}
+.texte-au-bas-page-confirmation-contact{
+color:black ;
+
+
+}
