--- a/StylePageDescriptionProjet.css
+++ b/StylePageDescriptionProjet.css
@@ -43,3 +43,146 @@
  
      background-color: black;
 }
+.container-page-description-projet-lien-de-debut-blog-du-jeu{
+display: flex;
+flex-direction: row;
+justify-content: space-between;
+width: 1600px;
+align-items: center;
+padding-left: 200px;
+font-size: 30px;
+color: black;
+font-weight: bolder;
+
+}
+.container-page-description-projet-lien-de-debut-site-officiel-du-jeu{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 1600px;
+    align-items: center;
+    padding-left: 200px;
+    font-size: 30px;
+    color: black;
+    font-weight: bolder;
+
+}
+.conteneur-choix-des-couleurs{
+display: flex;
+flex-direction: column;
+font-size: 20px;
+
+
+}
+.conteneur-disposition-elements-visuels{
+    display: flex;
+    flex-direction: column;
+    padding-left: 150px;
+    font-size: 20px;
+   
+    
+    
+}
+.conteneur-Homogeneite{
+    display: flex;
+    flex-direction: column;
+    padding-right: 200px;
+    font-size: 20px;
+
+
+}
+.conteneur-guidage{
+    display: flex;
+    flex-direction: column;
+    font-size: 20px;
+    
+
+
+
+}
+.conteneur-Homogeneite-et-guidage{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-right: 200px;
+
+
+
+}
+.conteneur-choix-des-couleurs-et-disposition-elements-visuels{
+display: flex;
+flex-direction: row;
+justify-content: space-between;
+padding-left: 200px;
+
+
+
+}
+.conteneur-aspect-visuel-et-contenu-du-site{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    
+
+
+
+}
+h3{
+    font-weight: bolder;
+
+
+
+
+}
+.conteneur-Killian-Laurier{
+display: flex;
+flex-direction: row;
+justify-content: space-between;
+width: 1300px;
+padding-left: 700px;
+padding-top: 100px;
+padding-bottom: 50px;
+}
+.conteneur-Killian{
+display: flex;
+flex-direction: column;
+align-items: center;
+font-size: 20px;
+}
+.conteneur-Laurier{
+display: flex;
+flex-direction: column;
+align-items: center;
+font-size: 20px;
+}
+.titre-presentation{
+color: black;
+font-size: 30px;
+font-weight: bold;
+padding-bottom: 15px;
+
+
+}
+.text-container-case-jaune{
+    font-weight: bold;
+    align-items: center;
+    background-image: url(images/Zone\ retour\ accueil.png);
+    font-size: 25px;
+    padding-left: 50px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-right: 50px;
+    display: flex;
+    justify-content:space-between;
+    flex-direction: row;
+    color: black;
+}
+.container-case-jaune{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-top: 200px;
+    width: 1800px;
+    padding-left: 100px;
+    padding-bottom: 30px;
+    }
