Correction de noms de dossiers

--- a/StylePageDescriptionProjet.css
+++ b/StylePageDescriptionProjet.css
@@ -166,7 +166,7 @@ padding-bottom: 15px;
 .text-container-case-jaune{
     font-weight: bold;
     align-items: center;
-    background-image: url(images/Zone\ retour\ accueil.png);
+    background-image: url(images-et-vidéos/Zone\ retour\ accueil.png) ;
     font-size: 25px;
     padding-left: 50px;
     padding-top: 20px;
