--- a/StyleIndex.css
+++ b/StyleIndex.css
@@ -59,13 +59,55 @@ font-size: 40px;
 color: white;
 font-weight: bold;
 padding-bottom: 50px;
-
-
-
-
+}
+.conteneur-page-index-partie-2{
+    display: flex;
+    
 }
 
-
+    .conteneur-page-index-partie-3{
+        background-image:url(images-et-vidéos/forme\ grise.png);
+        background-size:  cover;
+        display: flex;
+        height: 1225px;
+        justify-content: space-between;
+        
+        
+        }
+        .conteneur-page-index-partie-contact-gauche{
+        display: flex;
+        flex-direction: column;
+        padding-left: 170px;
+        padding-top: 140px;
+        
+        }
+        .conteneur-page-index-partie-description-projet-droite{
+        display: flex;
+        flex-direction: column;
+        padding-right: 150px;
+        padding-top: 140px;
+        
+        }
+        .conteneur-image-gris{
+        position: relative;
+        align-items: center;
+        text-align: center;
+        
+        }
+        .texte-image-gris{
+        position: absolute;
+        bottom: 20px;
+        right: 20px;
+        color: black;
+        padding-left: 20px;
+        padding-right: 250px;
+        align-items: center;
+        text-align: center;
+        font-size: 30px;
+        font-weight: bold;
+        color: black;
+        padding-bottom: 40px;
+        }
 
 
 
