Arrangement des liens d'images à cause du changement de nom de dossier

--- a/StyleIndex.css
+++ b/StyleIndex.css
@@ -66,7 +66,7 @@ padding-bottom: 50px;
 }
 
     .conteneur-page-index-partie-3{
-        background-image:url(images-et-vidéos/forme\ grise.png);
+        background-image:url(images/forme\ grise.png);
         background-size:  cover;
         display: flex;
         height: 1225px;
