Correction de liens pour l'image du rectangle jaune en bas de page dans le fichier << stylesmaps.css

--- a/stylemaps.css
+++ b/stylemaps.css
@@ -95,7 +95,7 @@
     .text-container-case-jaune{
     font-weight: bold;
     align-items: center;
-    background-image:url(images-et-vidéos/Zone\ retour\ accueil.png) ;
+    background-image:url(images/Zone\ retour\ accueil.png) ;
     padding-left: 50px;
     padding-top: 20px;
     padding-bottom: 20px;
