--- a/StylePageDescriptionProjet.css
+++ b/StylePageDescriptionProjet.css
@@ -86,7 +86,7 @@ font-size: 20px;
 .conteneur-Homogeneite{
     display: flex;
     flex-direction: column;
-    padding-right: 200px;
+    padding-right: 230px;
     font-size: 20px;
 
 
@@ -95,6 +95,8 @@ font-size: 20px;
     display: flex;
     flex-direction: column;
     font-size: 20px;
+
+    
     
 
 
@@ -138,8 +140,8 @@ h3{
 display: flex;
 flex-direction: row;
 justify-content: space-between;
-width: 1300px;
-padding-left: 700px;
+
+padding-left: 500px;
 padding-top: 100px;
 padding-bottom: 50px;
 }
@@ -148,12 +150,15 @@ display: flex;
 flex-direction: column;
 align-items: center;
 font-size: 20px;
+
 }
 .conteneur-Laurier{
 display: flex;
 flex-direction: column;
 align-items: center;
 font-size: 20px;
+padding-right: 400px;
+
 }
 .titre-presentation{
 color: black;
@@ -185,4 +190,24 @@ padding-bottom: 15px;
     width: 1800px;
     padding-left: 100px;
     padding-bottom: 30px;
-    }
+}
+p{
+font-size: 25px;
+
+
+
+
+
+}
+.conteneur-flèche-description-projet{
+display: flex;
+flex-direction: row;
+padding-left: 250px;
+}
+.duo-fleche-de-droite{
+    padding-left: 230px;
+    padding-bottom: 20px;
+
+
+
+}
