--- a/StylePageDescriptionProjet.css
+++ b/StylePageDescriptionProjet.css
@@ -43,7 +43,7 @@
  
      background-color: black;
 }
-.container-page-description-projet-lien-de-debut-blog-du-jeu{
+.conteneur-page-description-projet-lien-de-debut-blog-du-jeu{
 display: flex;
 flex-direction: row;
 justify-content: space-between;
@@ -55,7 +55,7 @@ color: black;
 font-weight: bolder;
 
 }
-.container-page-description-projet-lien-de-debut-site-officiel-du-jeu{
+.conteneur-page-description-projet-lien-de-debut-site-officiel-du-jeu{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -168,7 +168,7 @@ padding-bottom: 15px;
 
 
 }
-.text-container-case-jaune{
+.texte-conteneur-case-jaune{
     font-weight: bold;
     align-items: center;
     background-image: url(images/Zone\ retour\ accueil.png) ;
@@ -182,7 +182,7 @@ padding-bottom: 15px;
     flex-direction: row;
     color: black;
 }
-.container-case-jaune{
+.conteneur-case-jaune{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
